--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="src/styles.css">
-    <title>Woolacombe Bay - The Perfect Destination</title>
+    <title>Woolacombe Bay - The Best Family Holiday Destination in England</title>
 </head>
 <body>
     <header>
+        <h3>
+            ⛵TRAVEL⛵
+        </h3>
         <h1>
             Woolacombe Bay
         </h1>
         <h2>
             The perfect holiday destination
         </h2>
+        <img src="images/lundy-puffin.png" alt="">
     </header>
 </body>
 </html>
