Added footer and links

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
         </h2>
         <img src="images/lundy-puffin.png" alt="">
     </header>
+    <footer>
+        This projected was coded by <a href="https://github.com/annadowding">Anna Dowding</a>, and is <a href="https://github.com/annadowding/woolacombe-project">open-sourced</a>.
+    </footer>
 </body>
 </html>
