Added responsiveness to main (using bootstrap grid and media queries) and footer (using CSS grid)

--- a/index.html
+++ b/index.html
@@ -19,16 +19,53 @@
   <body>
     <div class="container">
       <header>
-        <h3>⛵TRAVEL⛵</h3>
+        <h3>. TRAVEL .</h3>
         <h1>Woolacombe Bay</h1>
         <h2>The perfect holiday destination</h2>
         <a href="#">Explore</a>
       </header>
-    </div>
+    
+
+      <main>
+        <div class="row d-flex justify-content-between">
+          <div class="col-lg">
+            <img src="../images/lundy-puffin.png" alt=""/>
+          </div>
+          <div class="col">
+            <h5>
+              | Why Woolacombe?
+            </h5>
+            <h2>One of North Devon's best-loved beaches</h2>
+            <p>
+              Woolacombe lies within the North Devon Coast Area of Outstanding
+              Natural Beauty, which is renowned for its dramatic coastal cliffs
+              and landscape. Due to Atlantic waves, the swell is large making it a
+              good for surfing
+            </p>
+            <p>
+              Woolacombe is a seaside resort on the coast of North Devon, England,
+              which lies at the mouth of a valley (or "combe") in the parish of
+              Mortehoe. The beach is 2 miles (3.2 km) long, sandy, gently sloping
+              and faces the Atlantic Ocean near the western limit of the Bristol
+              Channel.
+            </p>
+            <p>
+              Across from the beach, there are views of Lundy Island. Woolacombe
+              has low cliffs at either end of the beach which are home to rare
+              maritime heathland. Much of the countryside close to the village is
+              owned and cared for by the National Trust. The coast itself is part
+              of the North Devon Voluntary Marine Conservation Area because of its
+              diverse and rare species.
+            </p>
+          </div>
+        </div>
+      </main>
+
+  </div>
 
     <footer>
-      <section class="grid">
-        <div class="footer-box">
+      <div class="grid container">
+        <div>
           <h4>
             More about Woolacombe
           </h4>
@@ -38,7 +75,8 @@
             <li><a href="https://www.woolacombesurfcentre.com/">Woolacombe Surf Centre</a></li>
           </ul>
         </div>
-        <div class="footer-box">
+        
+        <div>
           <h4>
             About me
           </h4>
