Aligned contents of main and footer by wrapping each in container class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </title>
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container"> -->
       <header>
         <h3>. TRAVEL .</h3>
         <h1>Woolacombe Bay</h1>
@@ -27,7 +27,7 @@
     
 
       <main>
-        <div class="row d-flex justify-content-between">
+        <div class="row d-flex justify-content-between container">
           <div class="col-lg">
             <img src="../images/lundy-puffin.png" alt=""/>
           </div>
@@ -65,7 +65,7 @@
 
     <footer>
       <div class="grid container">
-        <div>
+        <div class>
           <h4>
             More about Woolacombe
           </h4>
