Changed music embeds from grid to flex

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </div>
 
             <div class="embeds-music container">
-              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4btOFaCuY4fh68HEAvdmxH?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="embed-music d-none d-sm-block"></iframe>
+              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4btOFaCuY4fh68HEAvdmxH?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="embed-music"></iframe>
             
             
               <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2kW7IHr0xZFmuciDWhIfJr?utm_source=generator" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" class="embed-music"></iframe>
